[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/Control.gd" type="Script" id=1]
[ext_resource path="res://gfx/icon.png" type="Texture" id=2]
[ext_resource path="res://gfx/fonts/font.tres" type="DynamicFont" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 470.0
margin_right = 534.0
margin_bottom = 142.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
margin_top = 39.0
margin_right = 64.0
margin_bottom = 103.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 1004.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 63
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 445.0
margin_right = 558.0
margin_bottom = 142.0
alignment = 1

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 113.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
text = "1 Player"

[node name="CheckBox2" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 113.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 3 )
pressed = true
text = "2 Player"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 1004.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 1004.0
margin_bottom = 142.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "START"
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_CheckBox2_toggled"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer3/Button" to="." method="_on_Button_button_up"]
